--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,10 @@
 # mkdocs-material: https://squidfunk.github.io/mkdocs-material/
 # mkdocs: https://www.mkdocs.org/user-guide/configuration/
 
-site_name: doredream
+site_name: Doredream
 theme:
   name: material
-  #  favicon: attachment/portrait.png
+  #favicon: attachment/portrait.png
   language: zh # 中文，解决中文搜索问题
   features:
     - navigation.expand 
@@ -40,7 +40,7 @@ markdown_extensions:
   - pymdownx.tasklist
   - pymdownx.tilde
 plugins:
-  - search
+  #- search #搜索功能
   - roamlinks 
     #- autolinks 
   - exclude:
